--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link
+      rel="stylesheet"
+      href=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+    <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
+    <script src=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
+    </script>
+
+</head>
 <body>
-<h1>Congreso Mundial</h1>
-<h2>Generador de Fotochecks</h2>
-<img id="scream" src="https://misaelherrerab.github.io/assets/imagenbase.jpg" alt="The Scream" width="220" height="277">
-<br>
-<br>
-<input type="text" id="nombres" value="Nombres">
-<br>
-<br>
-<input type="text" id="apellidos" value="Apellidos">
-<br>
-<br>
-Hotel?
-<input id="isDiscounted" name="isDiscounted" type="radio" value= 0 checked> Si 
-<input id="isNotDiscounted" name="isDiscounted" type="radio" value= 1 > No
-<br>
-<input type="text" id="hotel" value="Nombre del Hotel">
-<br>
-<p><button onclick="draw()">Descargar</button></p>
+
+
+<div class="container">
+    
+    <div class="row">
+		<form role="form" class="col-md-9">
+			<h2>Congreso Mundial</h2>
+            <p>Generador de Fotochecks</p>
+		<div class="form-group">
+            <input type="text" id="nombres" class="form-control" placeholder="Nombres">
+		</div>
+        <div class="form-group">
+            <input type="text" id="apellidos" class="form-control" placeholder="Apellidos">
+        </div>
+
+		<div class="form-group">
+            Hotel?
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="isDiscounted" id="isDiscounted" value= 0 checked>
+  <label class="form-check-label" for="inlineRadio1">Si</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="isDiscounted" id="isNotDiscounted" value= 1>
+  <label class="form-check-label" for="inlineRadio2">No</label>
+</div>
+<!-- 
+<input id="isDiscounted" name="isDiscounted" class="form-control" type="radio" value= 0 checked> Si 
+<input id="isNotDiscounted" name="isDiscounted" class="form-control" type="radio" value= 1 > No
+-->
+		</div>
+		<div class="form-group">
+            <input type="text" id="hotel" class="form-control" placeholder="Nombre del Hotel">
+		</div>
+            <div class="text-center">
+                <p><button class="btn btn-info btn-block rounded-0 py-2" onclick="draw()">Descargar</button></p>
+            </div>
+		</form>
+
+<div class="row" col-md-3>
+    <br>
+    <br>
+     <img id="scream" src="https://misaelherrerab.github.io/assets/imagenbase.jpg" alt="The Scream" width="220" height="277" >
+</div>
+
+	</div>
+</div>
+
 
 <canvas id="myCanvas" width="1917" height="2809" style="border:1px solid grey" hidden></canvas>
 
